- Fixed bug #48539 (pdo_dblib fails to connect, throws empty PDOException "SQLSTATE[] (null)")

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@282910 c90b9560-bf6c-de11-be94-00142212c4b1